Person als Schütze

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -25,17 +25,17 @@
   "discount": "Rabatt",
   "discountType": "Rabatttyp",
   "footerText": "Fusstext",
-  "person": "Person",
+  "person": "Schütze",
   "customerNumber": "Kundennummer",
   "createdAt": "Erstellt am",
-  "confirmDeletePerson": "Soll die Person '{{ firstname }} {{ lastname }}' wirklich gelöscht werden?",
+  "confirmDeletePerson": "Soll der Schütze '{{ firstname }} {{ lastname }}' wirklich gelöscht werden?",
   "no": "Nein",
   "yes": "Ja",
   "editCustomer": "Kunden bearbeiten",
   "numberRangeType": "Nummernkreis-Typ",
   "company": "Firma",
-  "editPerson": "Person bearbeiten",
-  "personData": "Personendaten",
+  "editPerson": "Schützen bearbeiten",
+  "personData": "Schützendaten",
   "salutation": "Anrede",
   "firstname": "Vorname",
   "lastname": "Nachname",
