--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -4,7 +4,7 @@
   "goodbye": "Auf Wiedersehen",
   "discardChanges": "Änderungen verwerfen",
   "saveChanges": "Änderungen speichern",
-  "customerOverview": "Kundenübersicht",
+  "customerOverview": "Kundenübersicht2",
   "addAddress": "Adresse hinzufügen",
   "about": "Über",
   "numberRanges": "Nummernkreise",
