neues datenfeld birthdate bei person

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -61,5 +61,6 @@
   "warning": "Achtung!",
   "welcome": "Willkommen",
   "yes": "Ja",
-  "zip": "PLZ"
+  "zip": "PLZ",
+  "birthdate": "Geburtsdatum"
 }
