--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -61,5 +61,6 @@
   "country": "Country",
   "addressType": "Address Type",
   "removeAddress": "Remove Address",
-  "copyToClipboard": "Copy to clipboard"
+  "copyToClipboard": "Copy to clipboard",
+  "birthdate": "Birthdate"
 }
