schuetze und contest

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -62,5 +62,13 @@
   "welcome": "Willkommen",
   "yes": "Ja",
   "zip": "PLZ",
-  "birthdate": "Geburtsdatum"
+  "birthdate": "Geburtsdatum",
+  "add": "Hinzufügen",
+  "contest": "Wettkampf",
+  "disciplineType": "Disziplinart",
+  "series": "Serien",
+  "shots": "Schüsse",
+  "distance": "Entfernung",
+  "contests": "Wettkämpfe",
+  "schuetzeOverview": "Übersicht"
 }
