changed customer translations for schuetze

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -1,7 +1,7 @@
 {
   "about": "Über",
   "addAddress": "Adresse hinzufügen",
-  "addCustomer": "Kunden hinzufügen",
+  "addCustomer": "Hinzufügen",
   "additional": "Weiteres",
   "address": "Adresse",
   "addressCopyError": "Fehler beim Kopieren der Adresse in die Zwischenablage!",
